--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,7 +10,10 @@
   "dependencies": {
     "pinia": "^2.0.32",
     "vue": "^3.2.47",
-    "vue-router": "^4.1.6"
+    "vue-router": "^4.1.6",
+    "@fortawesome/fontawesome-svg-core": "^6.3.0",
+    "@fortawesome/free-solid-svg-icons": "^6.3.0",
+    "@fortawesome/vue-fontawesome": "^3.0.0-5"
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^4.0.0",
